<resources>
    <string name="app_name">LAB4New</string>
    <string name="actu">Actualización disponible</string>
    <string name="download">Descargar</string>
    <string name="dia">Jueves</string>
    <string name="fecha">28 de marzo</string>
    <string name="jornada">Terminar Jornada</string>
    <string name="pizza">Little Caesars</string>
    <string name="direc">Cc Bosques de San Nicolás, z4 Mixco</string>
    <string name="horas">9:00am - 9:00pm</string>
    <string name="Start">Iniciar</string>
    <string name="details">Detalles</string>
    <string name="pulse">Pulse botón para iniciar</string>
    <string name="iniciar_vista">Iniciar Visita</string>
    <string name="informacion_adicional">Informacion adicional</string>
</resources>