<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppActivity"
    android:background="#cfd8d6"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/celeste"
        android:padding="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        >

        <TextView
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:fontFamily="helvetica"
            android:text="@string/actu"
            android:textColor="@color/black"
            android:textSize="16sp"


            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download"
            android:textColor="#1e88e5"
            android:textSize="16sp"
            android:textStyle="bold"

            />
    </LinearLayout>

    <TextView
        android:id="@+id/diaCumple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/dia"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="#424242"
        android:layout_margin="18dp"


        />
    <TextView
        android:id="@+id/fechacumple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/diaCumple"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/fecha"
        android:textSize="30sp"
        android:textColor="#757575"
        android:layout_margin="18dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/fechacumple"
        app:layout_constraintTop_toBottomOf="@+id/diaCumple"
        app:layout_constraintBottom_toBottomOf="@+id/fechacumple"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/jornada"
        android:textColor="#9575cd"
        app:strokeWidth="1dp"
        app:strokeColor="#9575cd"

        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="359dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/fechacumple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#FFFFFF"
        >
    <TextView
            android:id="@+id/rest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/pizza"
            android:textSize="25sp"
            android:textColor="#424242"
            android:layout_margin="18dp"
            android:textStyle="bold"
        />
        <TextView
            android:id="@+id/direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/rest"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/direc"
            android:textSize="17sp"
            android:textColor="#757575"
            android:layout_margin="18dp"
        />
        <TextView
            android:id="@+id/hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/direccion"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/horas"
            android:textSize="15sp"
            android:textColor="#757575"
            android:layout_margin="18dp"

            />

        <Button
            android:id="@+id/boton"
            android:layout_width="138dp"
            android:layout_height="41dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:text="@string/Start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hora"
            android:backgroundTint="#ff5722"
            />

        <Button
            android:layout_width="131dp"
            android:layout_height="43dp"
            android:layout_marginTop="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/boton"
            app:layout_constraintTop_toBottomOf="@+id/hora"
            android:text="@string/details"
            android:textColor="#ff5722"
            android:backgroundTint="@android:color/transparent"
            app:strokeWidth="1dp"
            app:strokeColor="#ff5722"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>