<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#cfd8d6"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="@dimen/lineardim"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/celeste"
        android:padding="@dimen/paddinglin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        >

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_refresh_24" />

        <TextView
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:fontFamily="helvetica"
            android:text="@string/actu"
            android:textColor="@color/black"
            android:textSize="@dimen/tamañotexto1"


            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download"
            android:textColor="@color/azulfuerte"
            android:textSize="@dimen/tamañodescarga"
            android:textStyle="bold"

            />
    </LinearLayout>

    <TextView
        android:id="@+id/diaCumple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/dia"
        android:textSize="@dimen/tamañodia"
        android:textStyle="bold"
        android:textColor="@color/grisoscuro"
        android:layout_margin="@dimen/margin"


        />
    <TextView
        android:id="@+id/fechacumple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/diaCumple"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/fecha"
        android:textSize="@dimen/tamañofecha"
        android:textColor="@color/grisclaro"
        android:layout_margin="@dimen/margin"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/fechacumple"
        app:layout_constraintTop_toBottomOf="@+id/diaCumple"
        app:layout_constraintBottom_toBottomOf="@+id/fechacumple"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/jornada"
        android:textColor="@color/morado"
        app:strokeWidth="@dimen/grosor"
        app:strokeColor="@color/morado"

        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/anchowidget"
        android:layout_height="@dimen/largowidget"
        android:layout_marginTop="@dimen/margenwidget"
        android:background="@color/blanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fechacumple">

        <TextView
            android:id="@+id/rest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/pizza"
            android:textColor="@color/grisoscuro"
            android:textSize="@dimen/tamañores"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mtimagen"
            android:src="@drawable/ic_baseline_directions_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.63"
            app:layout_constraintStart_toEndOf="@id/rest"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/direc"
            android:textColor="@color/grisclaro"
            android:textSize="@dimen/tamañodirec"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rest" />

        <TextView
            android:id="@+id/hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/horas"
            android:textColor="@color/grisclaro"
            android:textSize="@dimen/tamañohora"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/direccion"

            />

        <Button
            android:id="@+id/boton"
            android:layout_width="@dimen/tamañoboton2"
            android:layout_height="@dimen/altoboton2"
            android:layout_marginStart="@dimen/margenboton2"
            android:layout_marginTop="@dimen/margeniz"
            android:backgroundTint="@color/naranja"
            android:text="@string/Start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hora" />

        <Button
            android:layout_width="@dimen/tamañoboton2"
            android:layout_height="@dimen/altoboton2"
            android:layout_marginTop="14dp"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/details"
            android:textColor="@color/naranja"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/boton"
            app:layout_constraintTop_toBottomOf="@+id/hora"
            app:strokeColor="@color/naranja"
            app:strokeWidth="@dimen/grosor" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>